css/style.css
:root {
  --color1: #222831;
  --color2: #393e46;
  --color3: #1fe7f1;
  --color4: #eeeeee;
  --color5: #e7b597;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
::selection {
  color: #222831;
  background-color: #00adb5;
}
body {
  background-color: var(--color1);
}
.navbar {
  /* background-color: var(--color2); */
  width: 90%;
  height: 3.5rem;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: auto;
}

.part-nav {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.burger {
  position: absolute;
  right: 2.5%;
  width: 2.75rem;
  aspect-ratio: 1;
  background-color: var(--color2);
  border-radius: 0.5rem;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  opacity: 0;
}

.burger-line {
  width: 70%;
  height: 0.2rem;
  background-color: #00adb5;
  border-radius: 0.1rem;
  transition: all 0.25s ease-in-out;
}
.navbar a {
  color: var(--color3);
  font-weight: 500;
  font-size: 1.75rem;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 1.5rem;
}
.navbar a:hover {
  background-color: rgba(57, 62, 70, 0.322);
}
.intro {
  margin-top: 0.5rem;
  height: 90vh;
  min-height: 25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  flex-wrap: wrap;
  width: 90%;
  margin: auto;
}
.intro img {
  width: clamp(15rem, 24vw, 20rem);
}
h1 {
  font-size: clamp(2.5rem, 4.75vw, 4rem);
  color: var(--color3);
}
h2 {
  font-size: 2rem;
  padding: 1rem 0rem;
  color: var(--color3);
}
h3 {
  font-size: 1.75rem;
  padding: 0.75rem 0rem;
  color: var(--color3);
}
h5 {
  font-size: 1.375rem;
  padding: 0.5rem 0rem;
  color: var(--color4);
}
h6 {
  font-size: 1.125rem;
  padding: 0.5rem 0rem;
  font-weight: 700;
  color: var(--color3);
}
p {
  font-size: 1.125rem;
  color: var(--color4);
}
.intro-text-section {
  display: flex;
  gap: 2rem;
  flex-direction: column;
}
footer {
  width: 90%;
  margin: 1.25rem auto;
}
footer #about,
footer #contact {
  margin: 2rem 0rem;
}
.line {
  margin: auto;
  width: 100%;
  background-color: var(--color2);
  height: 0.25rem;
  border-radius: 0.125rem;
}
ul {
  list-style: none;
}
li {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 0.5rem;
}
li::before {
  content: ".";
  font-weight: 900;
  color: var(--color3);
  display: inline-block;
  transform: translateY(-0.25rem);
}
#contact li {
  margin: 0.25rem 0rem;
  color: white;
}
#contact p {
  margin: 0.5rem 0rem;
}
#contact a {
  color: #00adb5;
  text-decoration: none;
}

.store-all {
  width: 90%;
  margin: 1rem auto;
}
.items {
  margin: 0px auto;
  padding: 0.625rem 2rem;
  display: grid;
  grid-template-columns: repeat(auto-fit, 200px);
  gap: 2rem;
  justify-content: center;
}
.container {
  backdrop-filter: blur(16px) saturate(180%);
  background-color: rgba(57, 62, 70, 0.25);
  border-radius: 0.75rem;
  border: 1px solid rgba(255, 255, 255, 0.125);
  padding: 1rem;
  filter: drop-shadow(0 30px 10px rgba(0, 0, 0, 0.125));
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
  height: 260px;
  width: 200px;
  text-decoration: none;
}
.sect{
  border-radius: 1rem;
  border: 2px solid var(--color4);
  margin-top: 1rem;
  padding: 1rem;
}
.sect .content{
  padding: 1rem;
  border-radius: 1rem;
}
.container:hover {
  transform: scale(1.025);
  border-color: rgba(255, 255, 255, 0.9);
  filter: drop-shadow(0 0.3rem 0.2rem rgba(255, 255, 255, 0.125));
  transition: all 0.3s ease;
}
.wrapper {
  width: 100%;
}
.banner-image {
  height: calc(12rem - 2em);
  width: 100%;
  border-radius: 12px;
  border: 1px solid rgba(255, 255, 255, 0.25);
  background-color: #f6f6f6;
}

.banner-image img {
  object-fit: contain;
  height: 100%;
  width: 100%;
}

.notification{
  background-color: green;
  padding: 2rem;
  margin: 1rem auto;
  width: 70%;
  text-align: center;
}

.container h4 {
  font-size: 1.125rem;
  margin: 0.25rem 0px;
  font-family: "Righteous", sans-serif;
  color: var(--color5);
  text-transform: uppercase;
}
@media screen and (width <= 992px) {
}
@media screen and (width <= 768px) {
  .burger {
    opacity: 1;
  }
  .parent .card{
    width: 90%;
  }
  .navbar {
    gap: 1rem;
    justify-content: flex-end;
    margin-top: 0.5rem;
    position: relative;
    z-index: 3;
  }
  .part-nav {
    display: none;
    flex-direction: column;
    right: calc(3% + 3rem);
    width: fit-content;
    position: absolute;
    top: 0.5rem;
    background: rgba(0, 0, 0, 0.375);
    backdrop-filter: blur(10px);
    border-radius: 1rem;
    border: 1px solid gray;
  }
  .intro {
    height: 60vh;
  }
  
}
@media screen and (width <= 600px) {
  .items{
    padding: 0.625rem 1rem;
    gap: 1rem;
    grid-template-columns: repeat(auto-fit, 300px);
  }
  .container{
    width: 300px;
    height: 150px;
    flex-direction: row;
    justify-content: space-between;
  }
  .wrapper{
    width: 100px;
    height: 125px;
  }
  .banner-image{
    width: 100px;
    height: 125px;
  }
  .container h4{
    width: 150px;
  }
  
}

